--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="app__row">
           <select id="voiceSelector"></select>
           <button id="playButton">
-            <img src="/images/play.png" alt="play.png" />
+            <img src="images/play.png" alt="play.png" />
 
             Listen
           </button>
